some new images and some more outlining

--- a/source/physor2024_pres.bib
+++ b/source/physor2024_pres.bib
@@ -50,6 +50,15 @@ author = {Richard Hernandez and Michael Todosow and Nicholas R. Brown},
 keywords = {Heat pipe reactor, Fuel cycle performance, Modular microreactor},
 }
 
+@website{INL_MR,
+  author = {Joel Hiller},
+  title = {Microreactors},
+  organization = {Idaho National Lab},
+  url = {https://inl.gov/trending-topics/microreactors/},
+  urldate = {2024-04-09},
+  date = {August 2023}
+}
+
 @article{isotalo_comparison_2015,
 	title = {Comparison of {Neutronics}-{Depletion} {Coupling} {Schemes} for {Burnup} {Calculations}},
 	volume = {179},
