added TRISO figure and some intro content + citations

--- a/source/physor2024_pres.bib
+++ b/source/physor2024_pres.bib
@@ -38,16 +38,23 @@
 	address = {New York},
 }
 
+@article{Duchnowski_plant_balance_2022,
+  author = {Duchnowski, Edward M. and Kile, Robert F. and Bott, Kenny and Snead, Lance L. and Trelewicz, Jason R. and Brown, Nicholas R.},
+  title = {Pre-conceptual high temperature gas-cooled microreactor design utilizing two-phase composite moderators. Part I: Microreactor design and reactor performance},
+  year = {2022},
+  journal = {Progress in Nuclear Energy}
+}
+
 @article{Hernandez-hpmr,
-title = {Micro heat pipe nuclear reactor concepts: Analysis of fuel cycle performance and environmental impacts},
-journal = {Annals of Nuclear Energy},
-volume = {126},
-pages = {419-426},
-year = {2019},
-issn = {0306-4549},
-url = {https://doi.org/10.1016/j.anucene.2018.11.050},
-author = {Richard Hernandez and Michael Todosow and Nicholas R. Brown},
-keywords = {Heat pipe reactor, Fuel cycle performance, Modular microreactor},
+  title = {Micro heat pipe nuclear reactor concepts: Analysis of fuel cycle performance and environmental impacts},
+  journal = {Annals of Nuclear Energy},
+  volume = {126},
+  pages = {419-426},
+  year = {2019},
+  issn = {0306-4549},
+  url = {https://doi.org/10.1016/j.anucene.2018.11.050},
+  author = {Richard Hernandez and Michael Todosow and Nicholas R. Brown},
+  keywords = {Heat pipe reactor, Fuel cycle performance, Modular microreactor},
 }
 
 @website{INL_MR,
@@ -56,22 +63,31 @@ keywords = {Heat pipe reactor, Fuel cycle performance, Modular microreactor},
   organization = {Idaho National Lab},
   url = {https://inl.gov/trending-topics/microreactors/},
   urldate = {2024-04-09},
-  date = {August 2023}
+  month = {August},
+  year = {2023}
 }
 
 @article{isotalo_comparison_2015,
-	title = {Comparison of {Neutronics}-{Depletion} {Coupling} {Schemes} for {Burnup} {Calculations}},
-	volume = {179},
-	issn = {0029-5639, 1943-748X},
-	url = {10.13182/NSE14-35},
-	language = {en},
-	number = {4},
-	urldate = {2023-04-13},
-	journal = {Nuclear Science and Engineering},
-	author = {Isotalo, Aarno and Sahlberg, Ville},
-	month = apr,
-	year = {2015},
-	pages = {434--459}
+  title = {Comparison of {Neutronics}-{Depletion} {Coupling} {Schemes} for {Burnup} {Calculations}},
+  volume = {179},
+  issn = {0029-5639, 1943-748X},
+  url = {10.13182/NSE14-35},
+  language = {en},
+  number = {4},
+  urldate = {2023-04-13},
+  journal = {Nuclear Science and Engineering},
+  author = {Isotalo, Aarno and Sahlberg, Ville},
+  month = apr,
+  year = {2015},
+  pages = {434--459}
+}
+
+@techreport{HF_MRs_ANL,
+  author = {N. Stauff and A. Abdelhameed and Y.Cao and N.Fassino and L.Ibarra and Y. Miao and K. Mo and D. Nunez},
+  institution = {Argonne National Laboratory},
+  title = {High-fidelity multiphysics load following and accidental transient modeling of microreactors using NEAMS tools},
+  month = {September},
+  year = {2023}
 }
 
 @inproceedings{kim_reactivity_equivalent_2005,
@@ -167,4 +183,18 @@ keywords = {Heat pipe reactor, Fuel cycle performance, Modular microreactor},
   year  = {2023},
   publisher = {Taylor & Francis},
   URL = {https://doi.org/10.1080/00295639.2022.2142440}
+}
+
+@article{zhou_tang,
+title = {Current status and future development of coated fuel particles for high temperature gas-cooled reactors},
+journal = {Progress in Nuclear Energy},
+volume = {53},
+number = {2},
+pages = {182-188},
+year = {2011},
+issn = {0149-1970},
+doi = {https://doi.org/10.1016/j.pnucene.2010.10.003},
+url = {https://www.sciencedirect.com/science/article/pii/S0149197010001587},
+author = {X.W. Zhou and C.H. Tang},
+keywords = {TRISO-coated particle, High temperature gas-cooled reactor, Zirconium carbide, Uranium dioxide}
 }
